---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: ????
  Info:
    - Setup the proxy container prototype
    - Place a proxy when constructing the uplink
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2025. 03. 02
  Info:
    - Decouple the uplink from the assembling-machine-1
    - Unlock a craftable recipe with technology
    - Shift down the texture a bit
    - Add the not-rotatable flag
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 03. 01
  Info:
    - Setup the hurricane framework
    - Fix weird jumping frame slices
    - Inflate the selection and collision boxes
    - Use the forward-then-backward animation mode for now
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 03. 01
  Info:
    - Initial commit